# barcode-transformer

./: README.md  app.py  barcode_transformer.spec  pyproject.toml
templates/: index.html  result.html
